--- a/TankProject/Config/DefaultEngine.ini
+++ b/TankProject/Config/DefaultEngine.ini
@@ -7,8 +7,8 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Battlegrounds.Battlegrounds
-GameDefaultMap=/Game/Battlegrounds.Battlegrounds
+EditorStartupMap=None
+GameDefaultMap=/Game/_Levels/MainMenu.MainMenu
 GlobalDefaultGameMode=/Game/Battel_Tank_Game.Battel_Tank_Game_C
 
 [/Script/Engine.PhysicsSettings]
@@ -48,5 +48,3 @@ MaxSubsteps=6
 SyncSceneSmoothingFactor=0.000000
 AsyncSceneSmoothingFactor=0.990000
 InitialAverageFrameRate=0.016667
-
-
